# uni-connect

./: LICENSE  README.md  pyproject.toml
tests/: test_import.py
tests/connectors/: test_ai.py  test_crm.py  test_databases.py  test_messaging.py  test_storage.py  test_warehouse.py
tests/core/: test_core.py
uni_connect.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uniconnect/: __init__.py
uniconnect/connectors/: __init__.py
uniconnect/connectors/ai/: __init__.py  anthropic.py  aws_bedrock.py  cohere.py  deepseek.py  fireworks.py  google_ai.py  groq.py  huggingface.py  llama_cpp.py  mistral.py  mlflow.py  ollama.py  openai.py  perplexity.py  replicate.py  together.py  vllm.py
uniconnect/connectors/auth/: __init__.py  active_directory.py  ldap.py  oauth2.py
uniconnect/connectors/business_intelligence/: __init__.py  looker.py  metabase.py  mode.py  powerbi.py  tableau.py
uniconnect/connectors/cloud/: __init__.py  aws.py  azure.py  docker.py  gcp.py  hashicorp_vault.py  kubernetes.py  terraform.py
uniconnect/connectors/collaboration/: __init__.py  bitbucket.py  confluence.py  github.py  gitlab.py  jira.py  linear.py  notion.py
uniconnect/connectors/crm/: __init__.py  freshdesk.py  hubspot.py  intercom.py  marketo.py  ms_dynamics.py  netsuite.py  pipedrive.py  salesforce.py  sap_crm.py  servicenow.py  sugarcrm.py  zendesk.py  zoho.py
uniconnect/connectors/databases/: __init__.py  arangodb.py  cassandra.py  clickhouse.py  cockroachdb.py  couchbase.py  couchdb.py  duckdb.py  dynamodb.py  elasticsearch.py  firebird.py  ibm_db2.py  influxdb.py  mariadb.py  memcached.py  mongodb.py  mysql.py  neo4j.py  oracle.py  postgres.py  redis.py  sap_hana.py  singlestore.py  sqlite.py  sqlserver.py  timescaledb.py  yugabytedb.py
uniconnect/connectors/etl/: __init__.py  airbyte.py  dbt.py  fivetran.py  informatica.py  matillion.py  nifi.py  stitch.py  talend.py
uniconnect/connectors/messaging/: __init__.py  discord.py  email_imap.py  email_smtp.py  fcm.py  mailchimp.py  mailgun.py  onesignal.py  pushbullet.py  sendgrid.py  slack.py  teams.py  telegram.py  twilio.py
uniconnect/connectors/payments/: __init__.py  braintree.py  shopify.py  stripe.py  woocommerce.py
uniconnect/connectors/storage/: __init__.py  azure_blob.py  dropbox.py  ftp.py  gcs.py  gdrive.py  local.py  minio.py  onedrive.py  s3.py  sftp.py  webdav.py
uniconnect/connectors/streaming/: __init__.py  event_hubs.py  kafka.py  nats.py  pubsub.py  rabbitmq.py  sqs.py  zmq.py
uniconnect/connectors/warehouse/: __init__.py  athena.py  bigquery.py  databricks.py  druid.py  hive.py  impala.py  pinot.py  presto_trino.py  redshift.py  snowflake.py
uniconnect/core/: __init__.py  base.py  config.py  exceptions.py  factory.py  registry.py  utils.py
